umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_es+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Es#c+3#n3#u4"] :bonds [] :charge 3 :spin "#u4 #s5"}} :counts {:success true :output {:atoms ["Es#c+3#n5"] :bonds [] :charge 3 :spin "#u0 #s1"}}}
