umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_eu+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Eu#c+3#u6"} :bonds [] :charge 3 :spin "#u6 #s7"}} :counts {:success true :output {:atoms {"0" "Eu#c+3#n3"} :bonds [] :charge 3 :spin "#u0 #s1"}}}
