umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_fe+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Fe#c+2#n#u4"] :bonds [] :charge 2 :spin "#u4 #s5"}} :counts {:success true :output {:atoms ["Fe#c+2#n#u4"] :bonds [] :charge 2 :spin "#u4 #s5"}}}
