umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_fm+2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Fm#c+2#n5#u2"} :bonds [] :charge 2 :spin "#u2 #s3"}} :counts {:success true :output {:atoms {"0" "Fm#c+2#n6"} :bonds [] :charge 2 :spin "#u0 #s1"}}}
