umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_fm+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["Fm#c+3#n4#u3"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["Fm#c+3#n4#u3"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["Fm#c+3#n5#u"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["Fm#c+3#n5#u"] :bonds []} :success true :tie-breaks []}}
